Bugfix: ensure the search button is top-aligned

--- a/sites/all/themes/mcneese_drupal/css/screen.css
+++ b/sites/all/themes/mcneese_drupal/css/screen.css
@@ -224,6 +224,8 @@ div#block-search-form form#search-block-form input.form-submit {
   border: 0;
   margin: 0;
   padding: 0;
+
+  vertical-align: top;
 }
 
 div#block-search-form {
